--- a/imdex.html
+++ b/imdex.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>futebol brasileiro!</title>
 </head>
 <body>
-    
+    <header> FUTEBOL BRASILEIRO </header>
+    <h1> COISAS SOBRE O FUTEBOL BRASILEIRO</h1>   
 </body>
 </html>
