--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <header> FUTEBOL BRASILEIRO </header>
 
     <section class="primeirovideo">
-    <h1> COISAS SOBRE O FUTEBOL BRASILEIRO</h1>   
+     <div class="chamada-texto">
+    <h1> COISAS SOBRE O FUTEBOL BRASILEIRO</h1>    
     <p>ESCREVER SOBRE O SITE AQUI </p>
+     </div>
+
+     <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/I8sUEGYZYaE?si=nTxXbqiH1N-3jX7h" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section> 
+   </div>
+
+</section>
+
+    <secction clas="categoria">
+
+        
+    </secction>
 </body>
 </html>
